k8s/base/airflow-flower/deployment-flower.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-flower
  labels:
    app: airflow-flower

spec:
  replicas: 1

  selector:
    matchLabels:
      app: airflow-flower

  template:
    metadata:
      labels:
        app: airflow-flower

    spec:
      # Comme dans le deployment de mlflow pour s'assurer des droits identiques partout
      #securityContext:
        #runAsUser: 1000
        # Le Dokcerfile le fait en root
        #runAsGroup: 0
        #fsGroup: 0

      containers:
        - name: git-sync
          image: registry.k8s.io/git-sync/git-sync:v4.1.0
          imagePullPolicy: IfNotPresent

          securityContext:
            runAsUser: 65533
            runAsGroup: 65533

          volumeMounts:
            - name: airflow-git-repo
              # Répertoire de travail du container GitSync
              mountPath: /git

        - name: flower
          image: docker.io/library/accidents_severity-airflow:1.0
          # Si absente alors on l'a récupère sur le docker hub
          # Evolution dans un env de prod: mettre en place le sytème
          # pour récupérer l'image
          #imagePullPolicy: IfNotPresent
          # Configuration pour forcer l'utilisation de l'image locale
          imagePullPolicy: Never

          resources:
            # Le request réserve physiquement la mémoire
            # Le request vérifie que le CPU restant >= cpu sinon il ne démarre pas le pod
            # d'où la faible valeur car on a bcp de services
            requests:
              memory: "256Mi" # Ce qu'il demande au démarrage
              cpu: "50m"      # 0.05 vCPU
            limits:
              memory: "1Gi"  # Le plafond à ne pas dépasser
              cpu: "1000m"    # 1.0 vCPU maximum

          command: ["bash", "-c"]
          args:
            - airflow celery flower

          ports:
            - containerPort: 5555

          readinessProbe:
            httpGet:
              path: /flower/
              port: 5555
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 5

          # Vérification périodique pour savoir si le pod est toujours vivant
          livenessProbe:
            httpGet:
              path: /flower/
              port: 5555
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 30
            failureThreshold: 5

          volumeMounts:
            - name: airflow-git-repo
              mountPath: /opt/airflow/dags
              subPath: dags
            - name: airflow-git-repo
              mountPath: /opt/airflow/plugins
              subPath: plugins
            - name: logs
              mountPath: /opt/airflow/logs
              subPath: logs
            - name: params-volume
              mountPath: /opt/airflow/params.yaml
              subPath: params.yaml
            - name: docker-sock
              mountPath: /var/run/docker.sock
            - name: mlflow-artifacts
              mountPath: /app/artifacts

      volumes:
        - name: airflow-git-repo
          emptyDir: {}
        - name: logs
          persistentVolumeClaim:
            claimName: airflow-pvc-logs
        - name: params-volume
          hostPath:
            # Idéal pour le développement sur une seule VM (comportement identique à Docker Compose).
            # Attention : le fichier doit exister sur le nœud hôte avant le démarrage.
            # On monte le volume (<=> bindMounts avec docker compose) et ainsi tout devient visible et donc aussi params.yaml
            path: /home/ubuntu/Template_MLOps_accidents/
            type: Directory
          # Note : Avec hostPath, les données persistent sur le disque de la VM même si le Pod redémarre.

          # Alternative : emptyDir
          # emptyDir: {}
          # Inconvénient : Le volume est effacé à chaque fois que le Pod est recréé.
          # Nécessite un initContainer pour être repeuplé.

          # Alternative : configMap
          # configMap:
          #   name: airflow-params
          # Inconvénient : Montage en lecture seule (read-only). Impossible pour ton DAG d'écrire dedan
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: Socket
        - name: mlflow-artifacts
          persistentVolumeClaim:
            claimName: mlflow-artifacts-pvc
