k8s/base/airflow-flower/ingress-flower.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-flower-ingress
  annotations:
    # 1. Réécriture du chemin (pour enlever /webserver)
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    # même raison que pour webserver
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # nodelay est activé par défaut dans ingress-nginx
    nginx.ingress.kubernetes.io/limit-rps: "10"
    # 10 car il fait 10*rps = 100 (comme dans nginx)
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "10"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          #- path: /flower(/|$)(.*)
            #pathType: ImplementationSpecific
          - path: /flower
            # comme pour webserver
            pathType: Prefix
            backend:
              service:
                name: airflow-flower
                # Port d'entrée défini dans service.yaml
                port:
                  number: 80
                  #number: 5555
